# C_training

./: .gitignore  CMakeLists.txt  README.md
Dynamic_Storage_Allocation/: README.md
Dynamic_Storage_Allocation/src/: main.c
Formatted_Input_Output/: CMakeLists.txt  README.md
Formatted_Input_Output/include/: variable_declaration.h
Formatted_Input_Output/src/: main.c  variable_declaration.c
Pointers/src/: main.c
bitwise_operators/: .gitignore  CMakeLists.txt
bitwise_operators/include/: decimal_to_binary.h
bitwise_operators/src/: decimal_to_binary.c  main.c
dynamic_arrays/: CMakeLists.txt
dynamic_arrays/src/: main.c
threads/: .gitignore  CMakeLists.txt
threads/src/: main.c
